# zyntalic_schelling_trainer_lexicon

./: .gitignore  Codex_Page_1.html  DEVELOPMENT.md  IMPROVEMENTS.md  README.md  Zyntalic_onefile.py  Zynthalic_onefile.py  anchors_.tsv  app.py  config.py  demo_generate.py  demo_generate_lexicon.py  english_parser.py  fetch_anchors.py  generate_training_pairs.py  lexicon_from_tsv.py  makefile  normalize_data.py  protocol.py  pyproject.tom  pyproject.toml  requirements.txt  setup_lexicon_smart.py  train_projection.py  zyntalic_adapter.py  zyntalic_core.py  zyntalic_embeddings.py  zyntalic_syntax.py  zyntalic_translator.py  zyntalic_words.txt  zyntalic_words_demo.txt  zyntalic_words_lexicon_demo.txt  zynthalic_chiasmus.py  zynthalic_cli.py  zynthalic_dictionary.json  zynthalic_onefile.py  zynthalic_publisher.py  zynthalic_translation.txt
.github/workflow/: ci.yml.txt
lexicon/: Alice_in_wonderland.json  Aristotle_Organon.json  Austen_PridePrejudice.json  Bacon_NovumOrganum.json  Cervantes_DonQuixote.json  Dante_DivineComedy.json  Darwin_OriginOfSpecies.json  Descartes_Meditations.json  Dostoevsky_BrothersKaramazov.json  Goethe_Faust.json  Homer_Iliad.json  Homer_Odyssey.json  Laozi_TaoTeChing.json  Melville_MobyDick.json  Milton_ParadiseLost.json  Plato_Republic.json  Shakespeare_Sonnets.json  Spinoza_Ethics.json  Sunzi_ArtOfWar.json  Tolstoy_WarPeace.json  Virgil_Aeneid.json
other/: gutemberg.py  nltk.py  nltkless.py
outputs/: [Asne_Seierstad]_The_Bookseller_of_Kabul(BookSee.org).zyntalic.jsonl  [Asne_Seierstad]_The_Bookseller_of_Kabul(BookSee.org).zyntalic.tsv
raw_anchors/: Aristotle_Organon.txt  Bacon_NovumOrganum.txt  Goethe_Faust.txt  Laozi_TaoTeChing.txt  Spinoza_Ethics.txt  Virgil_Aeneid.txt
scripts/: buid_embeddings.py  generate_stream.py  normalize_data.py
tests/: test_determinism.py  test_smoke.py
webapp/: app.py  requirements.txt  run.py  translator.py
zyntalic/: __init__.py
(+10 files in other folders)
