[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zyntalic-schelling"
version = "1.0.0"
description = "Zyntalic Schelling-point trainer with lexicon priors - Professional language translation system"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kugguk2022" }]
keywords = ["language", "translation", "nlp", "schelling-points", "lexicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.8",
    "pytest>=8.0",
    "pytest-cov>=4.1.0"
]
embed = [
    "sentence-transformers>=3.0; python_version >= '3.9'"
]
webapp = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "pypdf>=3.17.0"
]
all = [
    "zyntalic-schelling[dev,embed,webapp]"
]

[project.scripts]
zyntalic = "zynthalic_cli:main"

[project.urls]
Homepage = "https://github.com/kugguk2022/zyntalic_schelling_trainer_lexicon"
Repository = "https://github.com/kugguk2022/zyntalic_schelling_trainer_lexicon"
Issues = "https://github.com/kugguk2022/zyntalic_schelling_trainer_lexicon/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
